tests/ui/parser/eq-less-to-less-eq.stderr
error: expected one of `!`, `(`, `+`, `::`, `<`, `>`, or `as`, found `{`
  --> $DIR/eq-less-to-less-eq.rs:4:15
   |
LL |     if a =< b {
   |          --   ^ expected one of 7 possible tokens
   |          |
   |          help: did you mean: `<=`

error: expected one of `!`, `(`, `+`, `::`, `<`, `>`, or `as`, found `{`
  --> $DIR/eq-less-to-less-eq.rs:12:15
   |
LL |     if a = <b {
   |               ^ expected one of 7 possible tokens

error: expected one of `!`, `(`, `+`, `::`, `<`, `>`, or `as`, found `{`
  --> $DIR/eq-less-to-less-eq.rs:20:16
   |
LL |     if a = < b {
   |                ^ expected one of 7 possible tokens

error[E0308]: mismatched types
  --> $DIR/eq-less-to-less-eq.rs:28:8
   |
LL |     if a =< i32>::abs(-4) {
   |        ^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to compare for equality
   |
LL |     if a ==< i32>::abs(-4) {
   |           +

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
